29.ingress/ingress/3.ingress.yaml
# apiVersion: networking.gke.io/v1beta1
# kind: FrontendConfig
# metadata:
#  name: ingress-test-fe-config
# spec:
#  redirectToHttps:
#    enabled: true
#    responseCodeName: PERMANENT_REDIRECT
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "load-eip"
    networking.gke.io/managed-certificates: "ingress-test-cert"
    # networking.gke.io/v1beta1.FrontendConfig: "ingress-test-fe-config"
spec:
  rules:
  - host: pratiksanas.live
    http:
      paths:
      - path: /maven-web-application
        pathType: Prefix
        backend: 
          service:
            name: mavenwebappsvc
            port:
              number: 80
